--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
